<resources>
    <string name="app_name">NewsApp</string>
    <string name="username">Hi Aarsh,</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="latestNews">Latest News</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="readFullNews">Read Full Article</string>
    <string name="publishedAt">Published At-</string>
    <string name="body">Body</string>
    <string name="author">Author</string>
    <string name="hi_user">Hi, User</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
</resources>