<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"
                    android:textSize="35sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/search_icon" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/latestNews"
                android:textSize="23dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestNewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/business_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/business" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/entertainment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:padding="10dp"
                    android:text="@string/entertainment" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/science_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/science" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sports_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/sports" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/technology_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:padding="10dp"
                    android:text="@string/technology" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Top Stories"
                android:textSize="23dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topStoriesRecycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
